2007-05-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: fix to return nil for LONG null column.
	* ext/oci8/env.c: use OCIInitialize() and OCIEnvInit() instead
	   of OCIEnvCreate() on every Oracle version.
	* ext/oci8/env.c, ext/oci8/error.c, ext/oci8/oci8.h: raise
	   "OCI Library Initialization Error" when Oracle can't supply
	   the error message.
	* ext/oci8/oci8.c: raise OCIException instead of TypeError.
	* lib/oci8/metadata.rb: fix typo in comment.
	* VERSION: change to 2.0-svn.

2007-04-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/tdo.c: enable XML support when Oracle 10g.
	* ext/oci8/xmldb.c: add oci8_make_rexml() to support XML for reading.
	* ext/oci8/lob.c: fix compiler warnings.
	* ext/oci8/error.c: fix a bit.

2007-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: fetch NCLOB column value as an OCI8::NCLOB. fetch
	    BINARY_DOUBLE and BINARY_FLOAT column as a Float.
	* lib/oci8/metadata.rb: OCI8::Metadata::Column#data_type can return
	    :nclob, :bfloat and :bdouble now.
	* ext/oci8/extconf.rb: check whether OCILobCreateTemporary exists.
	* ext/oci8/lob.c: add OCI8::NCLOB.
	* ext/oci8/oci8.h: add oci8_make_nclob().
	* ext/oci8/tdo.c: use oci8_make_nclob().

2007-04-26  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: fetch BFILE as OCI8::BFILE.
	* ext/oci8/lob.c: add OCI8::BFILE.
	* ext/oci8/oci8.h: add oci8_make_bfile().
	* ext/oci8/tdo.c: use oci8_make_bfile().
	* ext/oci8/stmt.c: use oci8_get_error_code().

2007-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c: change a way to set the error line number to the
	    OCIException's backtrace.

2007-02-15  KUBO Takehiro  <kubo@jiubao.org>
	no new features. fix to suppress warnings and to compile with ruby 1.9.
	* ext/oci8/attr.c, ext/oci8/lob.c, ext/oci8/metadata.c, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c, ext/oci8/rowid.c, ext/oci8/stmt.c,