@@ -154,7 +154,7 @@ Init_oci8lib()
     Init_oci_number(cOCI8);
     Init_oci_datetime();
     Init_oci_tdo(cOCI8);
-#ifdef HAVE_OCIXMLDB
+#if BUILD_FOR_ORACLE_10_1
     Init_oci_xmldb();
 #endif
 
